2009-10-05  Cyril Robert <crobert@inverse.ca>

	* Tests/test-webdavlib.py: Added new tests for the URL parser / regexp.
	* Tests/webdavlib.py: Fixed errors in the URL regexp.
	* SoObjects/Mailer/EOQualifier+MailDAV.m: New category to generate IMAP 
	qualifiers from DAV filters. (REPORT)

2009-10-04  Ludovic Marcotte  <lmarcotte@inverse.ca>

        * Adjusted the Welsh and Dutch templates for
	mail invitations - we were missing classes resulting
	in crashers.

2009-10-02  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Tests/webdavlib.py (MailDAVMailQuery): new class that implements
	the "mail-query" DAV REPORT.
	(WebDAVQuery._initProperties): new helper methods invoked by
	PROPFIND and REPORT classes at initialization to format the "prop"
	part of their query.
	(HTTPUnparsedURL._parse): accept more valid URL characters.

	* Tests/test-maildav.py
	(DAVMailCollectionTest.testREPORTMailQuery): new method with
	initial tests for "mail-query" report.

2009-10-01  Cyril Robert <crobert@inverse.ca>

	* SoObjects/Mailer/SOGoMailObject.m: Added methods required for PROPFIND /
	REPORT: _fetchProperty:, _hasFlag:, _emailAddressesFrom:, davDate,
	hasAttachment, read, textDescription, cc, from, inReplyTo, messageId,
	received, references, davDisplayName, to
	* Tests/test-maildav.py (testPROPFIND): Added tests for the new MailDAV
	PROPFIND.
	* UI/PreferencesUI/UIxPreferences.m (languages, language, setLanguage:,
	languageText): Added to support changing the language from the Preferences
	dialog.

2009-10-01  Cyril Robert  <crobert@inverse.ca>

	* SoObjects/Mailer/SOGoMailFolder.m
	(-appendMessage:inContext:usingId:): we no longer instantiate the
	message to check whether it exists since we trust the fact that we
	would receive an error from NGImap if the creation failed.

2009-10-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Tests/test-webdavlib.py: new test script for testing the
	webdavlib library itself.
	(HTTPUnparsedURLTest.testURLParse): new test case for the new